data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_768.wast
;; 9. **Test Description**:    Create a function where `nop` precedes a `br_table` and the `br_table` has a mix of valid and invalid (e.g., negative) indices. This ensures proper invalid index detection in presence of `nop`.      **Specific Constraint**: Mixed index validation resilience with `nop`.      **Edge Case**: Invalid (negative or too high) indices.

(assert_invalid
  (module
    (func
      (nop)
      (block
        (br_table -1 0 1 (i32.const 0))
      )
    )
  )
  "br_table element index out of range"
)